--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native": "0.57.1",
     "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2"
   }
 }
-
